[MODIFY] modified makefile

--- a/test/Makefile
+++ b/test/Makefile
@@ -7,5 +7,14 @@ run:
 valgrind:
 	valgrind ./a.out
 
+serial:
+	g++ -g -Wall -pedantic -std=c++11 serial_test.cpp -o serial
+
 chunked_test:
-	g++ -g -Wall -std=c++11 chunked_column_test.cpp -o chunked	
+	g++ -g -Wall -pedantic -std=c++11 chunked_column_test.cpp -o chunked
+
+kv:
+	g++ -g -Wall -pedantic -std=c++11 -o kv_test kvstore_test.cpp
+
+df_from:
+	g++ -g -Wall -pedantic -std=c++11 -o from dataframe_from_test.cpp	
